WIP: debugging playlist

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               //   artist: "Aaliyah"
               // }, ...
         var myPlaylist = new Playlist();
+        console.log(myPlaylist);
         var myApp = new App({library: myLibrary});
         //myApp.set('playlist', new Playlist());
         // var myPlaylist = new Songs(songData);
